--- a/Lesson33/Calculator.css
+++ b/Lesson33/Calculator.css
@@ -1,5 +1,6 @@
 .calculator{
     background-color: white;
+    box-shadow:20px 20px 60px black;
     margin:60px auto 0px auto;
     width:320px;
     height:400px;
@@ -11,6 +12,7 @@
     height: 30%;
     width:92%;
     background-color: #7a7a7a;
+    border-radius: 8px;
 }
 .keyboard{
     display: flex;
@@ -22,6 +24,7 @@
 }
 .operator, .number{
     background-color: #585858;
+    border-radius: 8px;
     color:white;
     width:60px;
     font-size:14px;
