--- a/MyWebsite/main.css
+++ b/MyWebsite/main.css
@@ -10,9 +10,17 @@
 .nav-bar{
     display: flex;
     justify-content:space-between;
-    padding-right: 90px;
+    padding-right: 30px;
     padding-left: 90px;
     padding-top: 20px;
     padding-bottom: 20px;
     background-color: lightsteelblue;
+}
+.logo{
+    height: 60px;
+    width: 100px;
+    border-color: steelblue;
+    border-radius:100px;
+    border-style: double;
+    border-width: 3px;
 }
