--- a/MyWebsite/main.css
+++ b/MyWebsite/main.css
@@ -1,3 +1,6 @@
+.main{
+    background-color: lightsteelblue;
+}
 .nav-bar>ul{
     list-style-type: none;
     display: flex;
@@ -23,4 +26,9 @@
     border-radius:100px;
     border-style: double;
     border-width: 3px;
+}
+.cards{
+    padding-left: 40px;
+    padding-right: 40px;
+    gap:20px;
 }
